Batch of misc. minor improvements primarily to deployment
Squashed commit of the following:

commit 1a63b8dcf1d08d1d834d461ea21e82e7f4e423a2
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 09:15:27 2019 -0700

    Add flag to show that an upgrade is in progress

commit d4b320ab6256115dddfce7cc2433fe7330d4c507
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 08:46:14 2019 -0700

    Update minio and metabase versions

commit e8cc16f3ae31abca84706ae17267fe6b0172be4e
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 08:38:29 2019 -0700

    Update standalone build

commit 415ed21e0c5784f73d4a7b8c71658ff9cd8fea6b
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 08:37:13 2019 -0700

    Update Dockerfile and compose

commit fd038dc59f626484502f54b4aa45c8784e2aca98
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 07:57:44 2019 -0700

    Remove duplicate upstream

commit f6d9c21d4b80023c1bd0755e082c1746d9d26d6d
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 07:53:17 2019 -0700

    Default to minimal log configuration and only add token stuff in prod

commit e325b3aa8d62bad2b29bba439b76208a63cbc4a0
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 07:30:03 2019 -0700

    Fix Java Class name

commit 445ec2986c8d336c23e7468c7ea534be11f4768c
Author: Jose V. Trigueros <j.v.trigueros@gmail.com>
Date:   Sun Mar 31 07:26:53 2019 -0700

    Set the default timezone to UTC, should make things easier